@@ -13,7 +13,7 @@ android {
     defaultConfig {
         applicationId = "net.mm2d.customtabssample"
         minSdk = 21
-        targetSdk = 33
+        targetSdk = 34
         versionCode = 1
         versionName = "1.0"
     }
@@ -48,14 +48,54 @@ android {
     }
 }
 
+val ktlint by configurations.creating
+
 dependencies {
     implementation("androidx.appcompat:appcompat:1.6.1")
     implementation("androidx.constraintlayout:constraintlayout:2.1.4")
-    implementation("androidx.recyclerview:recyclerview:1.3.1")
+    implementation("androidx.recyclerview:recyclerview:1.3.2")
     implementation("androidx.core:core-ktx:1.12.0")
-    implementation("androidx.browser:browser:1.6.0")
-    implementation("com.google.android.material:material:1.9.0")
-    implementation("net.mm2d.color-chooser:color-chooser:0.6.1")
+    implementation("androidx.browser:browser:1.7.0")
+    implementation("com.google.android.material:material:1.11.0")
+    implementation("net.mm2d.color-chooser:color-chooser:0.7.1")
+
+    ktlint("com.pinterest.ktlint:ktlint-cli:1.1.0") {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+        }
+    }
+}
+
+val ktlintCheck by tasks.registering(JavaExec::class) {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style"
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    args(
+        "**/src/**/*.kt",
+        "**.kts",
+        "!**/build/**",
+    )
+    isIgnoreExitValue = true
+}
+
+tasks.named<DefaultTask>("check") {
+    dependsOn(ktlintCheck)
+}
+
+tasks.register<JavaExec>("ktlintFormat") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style and format"
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    args(
+        "-F",
+        "**/src/**/*.kt",
+        "**.kts",
+        "!**/build/**",
+    )
+    isIgnoreExitValue = true
 }
 
 fun isStable(version: String): Boolean {
